--- a/school-website.html
+++ b/school-website.html
@@ -234,7 +234,7 @@
 <body>
     <header>
         <div class="header-content">
-            <div class="logo">NAMA SEKOLAH</div>
+            <div class="logo">SEKOLAH DASAR NEGERI 3 UTAN</div>
             <nav>
                 <ul>
                     <li><a href="#beranda">Beranda</a></li>
@@ -249,8 +249,8 @@
 
     <section class="hero" id="beranda">
         <div class="hero-content">
-            <h1>Selamat Datang di Sekolah Kami</h1>
-            <p>Membentuk Generasi Unggul, Berakhlak Mulia, dan Berwawasan Global</p>
+            <h1>Selamat Datang di Sekolah Dasar Negeri 3 Utan</h1>
+            <p>Cerdas, Mandiri, Terampil, Berakhlak Mulia, Berwawasan Lingkungan</p>
         </div>
     </section>
 
@@ -342,7 +342,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Nama Sekolah. Hak Cipta Dilindungi.</p>
+        <p>&copy; 2025 Sekolah Dasar Negeri 3 Utan. Hak Cipta Dilindungi.</p>
     </footer>
 </body>
 </html>
