--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 <body>
     <header>
         <div class="header-content">
-            <div class="logo">SEKOLAH DASAR NEGERI 3 UTAN</div>
+            <div class="logo"  <img src="images/SEKOLAH DASAR NEGERI 3 UTAN(2).png" alt="Logo SDN 3 Utan" style="height: 40px;">SEKOLAH DASAR NEGERI 3 UTAN</div>
             <nav>
                 <ul>
                     <li><a href="#beranda">Beranda</a></li>
@@ -247,7 +247,7 @@
         </div>
     </header>
 
-    <section class="hero" id="beranda">
+    <section class="hero" id="beranda" style="background-image: url('images/Beranda.jpeg');">
         <div class="hero-content">
             <h1>Selamat Datang di Sekolah Dasar Negeri 3 Utan</h1>
             <p>Cerdas, Mandiri, Terampil, Berakhlak Mulia, Berwawasan Lingkungan</p>
