--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </div>
     </header>
 
-    <section class="hero" id="beranda" style="background-image: url('images/Beranda.jpeg');">
+    <section class="hero" id="beranda" style="background-image: url('images/BACKGROUND.jpeg');">
         <div class="hero-content">
             <h1>Selamat Datang di Sekolah Dasar Negeri 3 Utan</h1>
             <p>Cerdas, Mandiri, Terampil, Berakhlak Mulia, Berwawasan Lingkungan</p>
