--- a/index.html
+++ b/index.html
@@ -259,7 +259,15 @@
             <h2>Tentang Kami</h2>
         </div>
         <div class="about-content">
-            <p>Sekolah kami berkomitmen untuk memberikan pendidikan berkualitas dengan mengembangkan potensi siswa secara optimal melalui pembelajaran yang inovatif dan pembentukan karakter yang kuat.</p>
+            <p>VISI</p>
+            <p>“TERWUJUDNYA INSAN YANG CERDAS, MANDIRI, TERAMPIL, BERAKHLAK MULIA DAN BERWAWASAN LINGKUNGAN”.</p>
+
+            <p>MISI</p>
+            <p>1. Cerdas Memfasilitasi Siswa dengan mengenali potensi siswa dalam mengembangkan kemampuan bidang akademik dan non akademik</p>
+            <p>2. Menumbuhkembangkan rasa kemandirian dan tanggung jawab peserta didik dalam aspek emosional, intelektual, dan spiritual;</p>
+            <p>3. Terampil dalam mengembangakan ilmu pengetahuan dan teknologi, Bahasa, olahraga dan seni budaya berdasarkan minat dan bakat peserta didik;</p>
+            <p>4. Melaksanakan program dan kegiatan sekolah untuk meningkatkan keimanan, ketaqwaan, akhlak mulia kepada peserta didik melalui penerapan pengamalan ajaran-ajaran agama;</p>
+            <p>5. Menumbuhkan rasa peduli terhadap lingkungan dengan mengikuti kegiatan sosial.</p>
         </div>
     </section>
 
@@ -270,11 +278,11 @@
         <div class="news-grid">
             <div class="news-card">
                 <div class="news-image">
-                    <img src="/api/placeholder/300/200" alt="Berita 1">
+                    <img src="images/Berita Bola.jpeg" alt="Berita 1">
                 </div>
                 <div class="news-content">
-                    <h3>Judul Berita 1</h3>
-                    <p>Deskripsi singkat berita atau pengumuman sekolah akan ditampilkan di sini.</p>
+                    <h3>Turnamen Volly Korwil Cup</h3>
+                    <p>Siswa Sekolah Dasar Negeri 3 Utan mengikuti turnamen bola volly yang di selenggarakan oleh Korwil Pendidikan Utan-Rhee</p>
                 </div>
             </div>
             <div class="news-card">
