--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 <body>
     <header>
         <div class="header-content">
-            <div class="logo"  <img src="images/SEKOLAH DASAR NEGERI 3 UTAN(2).png" alt="Logo SDN 3 Utan" style="height: 40px;">SEKOLAH DASAR NEGERI 3 UTAN</div>
+            <div class="logo"  <img src='images/SEKOLAH DASAR NEGERI 3 UTAN(2).png;' alt="Logo SDN 3 Utan" style="height: 40px;">SEKOLAH DASAR NEGERI 3 UTAN</div>
             <nav>
                 <ul>
                     <li><a href="#beranda">Beranda</a></li>
@@ -278,7 +278,7 @@
         <div class="news-grid">
             <div class="news-card">
                 <div class="news-image">
-                    <img src="images/Berita Bola.jpeg" alt="Berita 1">
+                    <img src='images/Berita Bola.jpeg;' alt="Berita 1">
                 </div>
                 <div class="news-content">
                     <h3>Turnamen Volly Korwil Cup</h3>
