--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <section class="hero" id="beranda" style="background-image: url('images/Background.jpeg');">
         <div class="hero-content">
             <h1>Selamat Datang di Sekolah Dasar Negeri 3 Utan</h1>
-            <p>Cerdas, Mandiri, Terampil, Berakhlak Mulia, Berwawasan Lingkungan</p>
+            <p><b>Cerdas, Mandiri, Terampil, Berakhlak Mulia, Berwawasan Lingkungan</b></p>
         </div>
     </section>
 
@@ -259,10 +259,10 @@
             <h2>Tentang Kami</h2>
         </div>
         <div class="about-content">
-            <p>VISI</p>
+            <p><b>VISI</b></p>
             <p>“TERWUJUDNYA INSAN YANG CERDAS, MANDIRI, TERAMPIL, BERAKHLAK MULIA DAN BERWAWASAN LINGKUNGAN”.</p>
-
-            <p>MISI</p>
+            <br/>
+            <p><b>MISI</b></p>
             <p>1. Cerdas Memfasilitasi Siswa dengan mengenali potensi siswa dalam mengembangkan kemampuan bidang akademik dan non akademik</p>
             <p>2. Menumbuhkembangkan rasa kemandirian dan tanggung jawab peserta didik dalam aspek emosional, intelektual, dan spiritual;</p>
             <p>3. Terampil dalam mengembangakan ilmu pengetahuan dan teknologi, Bahasa, olahraga dan seni budaya berdasarkan minat dan bakat peserta didik;</p>
@@ -273,7 +273,7 @@
 
     <section id="berita">
         <div class="section-title">
-            <h2>Berita Terkini</h2>
+            <h2><b>Berita Terkini</b></h2>
         </div>
         <div class="news-grid">
             <div class="news-card">
@@ -281,7 +281,7 @@
                     <img src='images/Berita Bola.jpeg;' alt="Berita 1">
                 </div>
                 <div class="news-content">
-                    <h3>Turnamen Volly Korwil Cup</h3>
+                    <h3><b>Turnamen Volly Korwil Cup</b></h3>
                     <p>Siswa Sekolah Dasar Negeri 3 Utan mengikuti turnamen bola volly yang di selenggarakan oleh Korwil Pendidikan Utan-Rhee</p>
                 </div>
             </div>
